WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301419
:first-line with word-spacing make other lines disappear
https://bugs.webkit.org/show_bug.cgi?id=301419
Summary
:first-line with word-spacing make other lines disappear
lucie
Reported
2025-10-24 02:23:08 PDT
Hello, When setting word-spacing on a first-line element, the other lines disappear. Sample to reproduce: <style> p:first-line { word-spacing: 10000px; } </style> <p> Lorem ipsum in dolor sit amet </p>
Attachments
test
(106 bytes, text/html)
2025-10-24 09:24 PDT
,
Alexey Proskuryakov
no flags
Details
Patch
(10.71 KB, patch)
2025-10-30 11:04 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(10.71 KB, patch)
2025-10-31 04:50 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2025-10-24 09:24:11 PDT
Created
attachment 477191
[details]
test Same test, as an attachment. I can reproduce this behavior.
alan
Comment 2
2025-10-30 11:04:18 PDT
Created
attachment 477237
[details]
Patch
Radar WebKit Bug Importer
Comment 3
2025-10-31 02:24:12 PDT
<
rdar://problem/163779992
>
alan
Comment 4
2025-10-31 04:50:22 PDT
Created
attachment 477243
[details]
[fast-cq]Patch
EWS
Comment 5
2025-10-31 08:39:58 PDT
Committed
302390@main
(4bbbcb2f19e3): <
https://commits.webkit.org/302390@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477243
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug