first-line with word-spacing make other lines disappear https://bugs.webkit.org/show_bug.cgi?id=301419

Reviewed by Antti Koivisto.

Both style and first-line style should be checked when deciding whether we can use
IFC's fast path.

Test: fast/text/word-spacing-on-first-line.html

* LayoutTests/fast/text/word-spacing-on-first-line-expected.html: Added.
* LayoutTests/fast/text/word-spacing-on-first-line.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::layout):
* Source/WebCore/layout/formattingContexts/inline/IntrinsicWidthHandler.cpp:
(WebCore::Layout::IntrinsicWidthHandler::IntrinsicWidthHandler):
* Source/WebCore/layout/formattingContexts/inline/RangeBasedLineBuilder.cpp:
(WebCore::Layout::RangeBasedLineBuilder::isEligibleForRangeInlineLayout):
* Source/WebCore/layout/formattingContexts/inline/TextOnlySimpleLineBuilder.cpp:
(WebCore::Layout::TextOnlySimpleLineBuilder::isEligibleForSimplifiedInlineLayoutByStyle):
* Source/WebCore/layout/formattingContexts/inline/TextOnlySimpleLineBuilder.h:

Canonical link: https://commits.webkit.org/302390@main